--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,14 +18,14 @@ services:
       - "./config/clients.conf:/etc/raddb/clients.conf"
       - "./config/radiusd.conf:/etc/raddb/radiusd.conf"
       - "./config/proxy.conf:/etc/raddb/proxy.conf"
-      - "./config/log/:/var/log/radius"
+      - "./config/log/:/var/log/radius/"
     environment:
       - DB_NAME=radius
       - DB_HOST=radiusdb
       - DB_USER=radius
       - DB_PASS=radpass
       - DB_PORT=3306
-      - RADIUS_KEY=testing123
+      - RADIUS_KEY=capacitaradiuskey
     depends_on:
       - radiusdb
     links:
