:sparkles: added configuration to main

--- a/config/proxy.conf
+++ b/config/proxy.conf
@@ -250,7 +250,7 @@ home_server localhost {
         #       e.g. "foo bar"
         #            "foo;bar"
         #
-        secret = testing123
+        secret = capacitaradiuskey
 
         ############################################################
         #
