--- a/config/clients.conf
+++ b/config/clients.conf
@@ -238,10 +238,15 @@ client localhost_ipv6 {
 #  When a client request comes in, the BEST match is chosen.
 #  i.e. The entry from the smallest possible network.
 #
-#client private-network-1 {
-#       ipaddr          = 192.0.2.0/24
-#       secret          = testing123-1
-#}
+client capacitasw1 {
+       ipaddr          = 192.0.1.1/24
+       secret          = capacitaswpasswd
+}
+
+client capacitasw2 {
+       ipaddr          = 192.0.1.2/24
+       secret          = capacitaswpasswd
+}
 
 #client private-network-2 {
 #       ipaddr          = 198.51.100.0/24
